# mfrc522-wokwi-chip

./: .clang-format  .gitignore  README.md
custom-chip/: Makefile  crc.h  fifo.h  mfrc522.c  mfrc522.json  picc.h  wokwi-api.h
tests/: diagram.json  wokwi.toml
tests/cpp/: Makefile  cpp.ino
tests/rust/: Cargo.toml
tests/rust/src/: main.rs
