[package]
name = "mfrc522_test"
version = "0.1.0"
authors = ["Jeff Thomas <jeffdthomas@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "mfrc522_test"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = "0.45.2"
esp-idf-sys = "0.36.1"
anyhow = "1.0.95"
embedded-svc = "0.28.1"
mfrc522 = { version = "0.8.0", features = ["std"] }
heapless = "0.8.0"

[build-dependencies]
embuild = "0.33"
